CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#project name
PROJECT(gsi)

#head file path
INCLUDE_DIRECTORIES(../rtl/c ../common/c/include ../ext/c ../specific/intelnt ../jpeg/c)

SET(CMAKE_CXX_FLAGS_DEBUG "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1")
SET(CMAKE_CXX_FLAGS_RELEASE "/MT /O2 /Ob2 /D NDEBUG")
SET(CMAKE_C_FLAGS_DEBUG "/D_DEBUG /MTd /Zi  /Ob0 /Od /RTC1")
SET(CMAKE_C_FLAGS_RELEASE "/MT /O2 /Ob2 /D NDEBUG")

#source directory
SET(DIR_SRCS 
./c/basics.c
./c/btstrp.c
./c/chars.c
./c/chars2.c
./c/clocks.c
./c/delta.c
./c/dllcbs.c
./c/g2cnfg.c
./c/gbmap.c
./c/gbmapr.c
./c/glbscs.c
./c/gscmn.c
./c/gsi.c
./c/gsi_w32init.c
./c/gsiannex.c
./c/gspts.c
./c/gsrpc1.c
./c/gsrpc2.c
./c/int1.c
./c/int2.c
./c/int3a.c
./c/int3b.c
./c/int4.c
./c/is2022.c
./c/is8859.c
./c/jismap.c
./c/ksmap2.c
./c/launch.c
./c/load.c
./c/loop.c
./c/lttrs.c
./c/names.c
./c/ntrrr.c
./c/ntvnt.c
./c/ntwrks.c
./c/os-mem.c
./c/os-set.c
./c/osfrgn.c
./c/osrrr.c
./c/ostme.c
./c/prmtvs.c
./c/pthnms.c
./c/rpcmn1.c
./c/rpcmn2.c
./c/rpcmn3.c
./c/schdle.c
./c/symtab.c
./c/systm.c
./c/times.c
./c/tran.c
./c/trnscd.c
./c/uncde.c
./c/userfuns.c
./c/userinit.c
./c/usersyms.c
./c/utlts0.c
./c/utlts1.c
./c/utlts2.c
./c/utlts3.c
./c/g2cnfg.h)
ADD_LIBRARY(gsi SHARED ${DIR_SRCS})
SET_TARGET_PROPERTIES(gsi PROPERTIES COMPILE_DEFINITIONS "GSI_TRANS;_WINDLL")

#librtl lib
SET(RTL_SRC_LIST 
../rtl/c/acons.c
../rtl/c/adjoin.c
../rtl/c/adjsblp.c
../rtl/c/adjstrry.c
../rtl/c/admnsns.c
../rtl/c/advncpcg.c
../rtl/c/allcmmg.c
../rtl/c/alphchrp.c
../rtl/c/alpnmrcp.c
../rtl/c/amjndx.c
../rtl/c/anbndsp.c
../rtl/c/append.c
../rtl/c/append2.c
../rtl/c/apply.c
../rtl/c/apply1.c
../rtl/c/apply2.c
../rtl/c/apply3.c
../rtl/c/aref.c
../rtl/c/aref0.c
../rtl/c/aref1.c
../rtl/c/aref2.c
../rtl/c/aref3.c
../rtl/c/aref4.c
../rtl/c/aref5.c
../rtl/c/aref6.c
../rtl/c/aref7.c
../rtl/c/armmrlmt.c
../rtl/c/armmrysd.c
../rtl/c/arrayp.c
../rtl/c/arrays.c
../rtl/c/arrdmnsn.c
../rtl/c/arrttlsz.c
../rtl/c/arryrnk.c
../rtl/c/artrgtsz.c
../rtl/c/asllpnp.c
../rtl/c/asscifnt.c
../rtl/c/assoc.c
../rtl/c/assoc_eq.c
../rtl/c/assoc_if.c
../rtl/c/assoceql.c
../rtl/c/assocqul.c
../rtl/c/assq.c
../rtl/c/atom.c
../rtl/c/avncmbl.c
../rtl/c/backquot.c
../rtl/c/bgintim.c
../rtl/c/biginit.c
../rtl/c/biginit2.c
../rtl/c/bignum.c
../rtl/c/bignump.c
../rtl/c/bindsyms.c
../rtl/c/bit_arrs.c
../rtl/c/bitp.c
../rtl/c/bitvctrp.c
../rtl/c/bothcsep.c
../rtl/c/boundp.c
../rtl/c/bqinit.c
../rtl/c/butlast.c
../rtl/c/caaaar.c
../rtl/c/caaadr.c
../rtl/c/caaar.c
../rtl/c/caadar.c
../rtl/c/caaddr.c
../rtl/c/caadr.c
../rtl/c/caar.c
../rtl/c/cadaar.c
../rtl/c/cadadr.c
../rtl/c/cadar.c
../rtl/c/caddar.c
../rtl/c/cadddr.c
../rtl/c/caddr.c
../rtl/c/cadr.c
../rtl/c/car.c
../rtl/c/ccl.c
../rtl/c/cdaaar.c
../rtl/c/cdaadr.c
../rtl/c/cdaar.c
../rtl/c/cdadar.c
../rtl/c/cdaddr.c
../rtl/c/cdadr.c
../rtl/c/cdar.c
../rtl/c/cdbltdbl.c
../rtl/c/cddaar.c
../rtl/c/cddadr.c
../rtl/c/cddar.c
../rtl/c/cdddar.c
../rtl/c/cddddr.c
../rtl/c/cdddr.c
../rtl/c/cddr.c
../rtl/c/cdr.c
../rtl/c/char_bit.c
../rtl/c/char_eq.c
../rtl/c/char_eqn.c
../rtl/c/char_eqr.c
../rtl/c/char_ge.c
../rtl/c/char_gen.c
../rtl/c/char_ger.c
../rtl/c/char_gt.c
../rtl/c/char_gtn.c
../rtl/c/char_gtr.c
../rtl/c/char_int.c
../rtl/c/char_le.c
../rtl/c/char_len.c
../rtl/c/char_ler.c
../rtl/c/char_lt.c
../rtl/c/char_ltn.c
../rtl/c/char_ltr.c
../rtl/c/char_ne.c
../rtl/c/char_nen.c
../rtl/c/char_ner.c
../rtl/c/charbits.c
../rtl/c/charcode.c
../rtl/c/charfont.c
../rtl/c/charname.c
../rtl/c/chars.c
../rtl/c/chrcter.c
../rtl/c/chrcterp.c
../rtl/c/chrdwncs.c
../rtl/c/chrequl.c
../rtl/c/chrequln.c
../rtl/c/chrequlr.c
../rtl/c/chrgrtrp.c
../rtl/c/chrlessp.c
../rtl/c/chrlsspn.c
../rtl/c/chrlsspr.c
../rtl/c/chrmmbr.c
../rtl/c/chrntqln.c
../rtl/c/chrntqlr.c
../rtl/c/chrntqul.c
../rtl/c/chrupcse.c
../rtl/c/cllc.c
../rtl/c/clrinput.c
../rtl/c/clrutput.c
../rtl/c/cmplmnnl.c
../rtl/c/cmplncnp.c
../rtl/c/cnnlnncn.c
../rtl/c/cnsnlfls.c
../rtl/c/cnsnlndl.c
../rtl/c/cnsnlr.c
../rtl/c/cobjectp.c
../rtl/c/codechar.c
../rtl/c/coerce.c
../rtl/c/commonp.c
../rtl/c/complexp.c
../rtl/c/conctnt.c
../rtl/c/consp.c
../rtl/c/copy_seq.c
../rtl/c/copylist.c
../rtl/c/copytree.c
../rtl/c/count.c
../rtl/c/count_if.c
../rtl/c/cp_alist.c
../rtl/c/cpfptr.c
../rtl/c/cpysymbl.c
../rtl/c/crgrtrpn.c
../rtl/c/crgrtrpr.c
../rtl/c/crngrrp.c
../rtl/c/crngrrpn.c
../rtl/c/crngrrpr.c
../rtl/c/crnlsspn.c
../rtl/c/crnlsspr.c
../rtl/c/crntlssp.c
../rtl/c/csnpsrm.c
../rtl/c/cspsrm.c
../rtl/c/cswrsrm.c
../rtl/c/ctrlvars.c
../rtl/c/cuntifnt.c
../rtl/c/dbltntgr.c
../rtl/c/dcdnvslm.c
../rtl/c/dcnmsng.c
../rtl/c/defftp.c
../rtl/c/deleteeq.c
../rtl/c/deleteif.c
../rtl/c/delq.c
../rtl/c/describe.c
../rtl/c/dgtchrp.c
../rtl/c/digitchr.c
../rtl/c/dirctory.c
../rtl/c/dldplcs.c
../rtl/c/dltfil.c
../rtl/c/dltifnot.c
../rtl/c/dltql.c
../rtl/c/dltqul.c
../rtl/c/doaref1.c
../rtl/c/dormovif.c
../rtl/c/dostfrf.c
../rtl/c/drmfrrr.c
../rtl/c/eighth.c
../rtl/c/encnvslm.c
../rtl/c/endp.c
../rtl/c/engnmsng.c
../rtl/c/eq.c
../rtl/c/eql.c
../rtl/c/equal.c
../rtl/c/equalp.c
../rtl/c/err_aux.c
../rtl/c/errors.c
../rtl/c/evalinit.c
../rtl/c/evalrun.c
../rtl/c/evals.c
../rtl/c/faref.c
../rtl/c/fifth.c
../rtl/c/filesys.c
../rtl/c/fill.c
../rtl/c/fillngth.c
../rtl/c/filuthor.c
../rtl/c/find.c
../rtl/c/find_if.c
../rtl/c/findifnt.c
../rtl/c/first.c
../rtl/c/fixnump.c
../rtl/c/flatsize.c
../rtl/c/fllpntr.c
../rtl/c/flnmsrng.c
../rtl/c/floatp.c
../rtl/c/flpstn.c
../rtl/c/flwrtdt.c
../rtl/c/fnllmbl.c
../rtl/c/fnshtm.c
../rtl/c/fnshtpt.c
../rtl/c/format.c
../rtl/c/forptrp.c
../rtl/c/forptrtp.c
../rtl/c/fortype.c
../rtl/c/fortypep.c
../rtl/c/forval.c
../rtl/c/fourth.c
../rtl/c/fpaddr.c
../rtl/c/fptrs.c
../rtl/c/fptype.c
../rtl/c/frcutput.c
../rtl/c/frfptr.c
../rtl/c/frshlin.c
../rtl/c/fsizeof.c
../rtl/c/fstrval.c
../rtl/c/ftmod.c
../rtl/c/ftname.c
../rtl/c/ftrem.c
../rtl/c/ftsize.c
../rtl/c/ftypep.c
../rtl/c/funcall.c
../rtl/c/funcall3.c
../rtl/c/funcln.c
../rtl/c/functinp.c
../rtl/c/gc.c
../rtl/c/gensym.c
../rtl/c/gentemp.c
../rtl/c/get.c
../rtl/c/getf.c
../rtl/c/gnrnlrlm.c
../rtl/c/gnrnlrnm.c
../rtl/c/gnvrslm.c
../rtl/c/grpccrp.c
../rtl/c/gtdcddtm.c
../rtl/c/gtprprts.c
../rtl/c/hash.c
../rtl/c/heap.c
../rtl/c/hsnmsrng.c
../rtl/c/ichrnme.c
../rtl/c/identity.c
../rtl/c/ifuns.c
../rtl/c/igglg.c
../rtl/c/ilzxlbl.c
../rtl/c/immedite.c
../rtl/c/ingrlng.c
../rtl/c/initgc.c
../rtl/c/inlzllbl.c
../rtl/c/inlzmbl.c
../rtl/c/inlzpckg.c
../rtl/c/innlmkp.c
../rtl/c/inspect.c
../rtl/c/int_char.c
../rtl/c/integerp.c
../rtl/c/intrsctn.c
../rtl/c/invldmd.c
../rtl/c/invlncnn.c
../rtl/c/io.c
../rtl/c/ismblnm.c
../rtl/c/isngsng.c
../rtl/c/isngsngn.c
../rtl/c/isyms.c
../rtl/c/keywordp.c
../rtl/c/lambinit.c
../rtl/c/last.c
../rtl/c/ldelete.c
../rtl/c/ldiff.c
../rtl/c/lfloat.c
../rtl/c/lgclpnmp.c
../rtl/c/list.c
../rtl/c/listp.c
../rtl/c/listrvrs.c
../rtl/c/liststar.c
../rtl/c/listvlus.c
../rtl/c/llisten.c
../rtl/c/lmlmnn.c
../rtl/c/lmlmnnvn.c
../rtl/c/load.c
../rtl/c/load_run.c
../rtl/c/lopen.c
../rtl/c/lowrcsp.c
../rtl/c/lreader.c
../rtl/c/lremove.c
../rtl/c/lsleep.c
../rtl/c/lstlngth.c
../rtl/c/lstnrvrs.c
../rtl/c/lunion.c
../rtl/c/m_nthcdr.c
../rtl/c/macros.c
../rtl/c/makechar.c
../rtl/c/makelist.c
../rtl/c/map.c
../rtl/c/map_into.c
../rtl/c/mapcar.c
../rtl/c/markgc.c
../rtl/c/mcfptr.c
../rtl/c/mchintyp.c
../rtl/c/mchnvrsn.c
../rtl/c/mcnnstnc.c
../rtl/c/mdcmbnn.c
../rtl/c/member.c
../rtl/c/membereq.c
../rtl/c/memberif.c
../rtl/c/memberse.c
../rtl/c/memq.c
../rtl/c/merge.c
../rtl/c/mismatch.c
../rtl/c/mkarrlt.c
../rtl/c/mkcomplx.c
../rtl/c/mkfptr.c
../rtl/c/mkfptri.c
../rtl/c/mkpthnm.c
../rtl/c/mkscnsnc.c
../rtl/c/mksqunc.c
../rtl/c/mksymbol.c
../rtl/c/mkunbund.c
../rtl/c/mkvctor.c
../rtl/c/mkvlucll.c
../rtl/c/mlplvlln.c
../rtl/c/mmbrifnt.c
../rtl/c/mmbrodd.c
../rtl/c/mmbrql.c
../rtl/c/mmbrqul.c
../rtl/c/mrgptnms.c
../rtl/c/mspcmccc.c
../rtl/c/mvsn.c
../rtl/c/namechar.c
../rtl/c/nbutlast.c
../rtl/c/nconc.c
../rtl/c/nconc2.c
../rtl/c/ncons.c
../rtl/c/ncons1.c
../rtl/c/ninth.c
../rtl/c/nmstring.c
../rtl/c/nntrsctn.c
../rtl/c/not.c
../rtl/c/nreconc.c
../rtl/c/nreverse.c
../rtl/c/nsbsfn.c
../rtl/c/nsbstfnt.c
../rtl/c/nsbsttt.c
../rtl/c/nsbstttf.c
../rtl/c/nsdffrnc.c
../rtl/c/nsngcplz.c
../rtl/c/nsngdncs.c
../rtl/c/nsrngpcs.c
../rtl/c/nsublis.c
../rtl/c/nsubst.c
../rtl/c/nsubstif.c
../rtl/c/nsxclsvr.c
../rtl/c/nth.c
../rtl/c/nthcdr.c
../rtl/c/null.c
../rtl/c/numberp.c
../rtl/c/numbers.c
../rtl/c/numinit.c
../rtl/c/nunion.c
../rtl/c/objccdbl.c
../rtl/c/oldsyms.c
../rtl/c/packagep.c
../rtl/c/packages.c
../rtl/c/pairlis.c
../rtl/c/pathname.c
../rtl/c/pctpintr.c
../rtl/c/peekchar.c
../rtl/c/pkginit.c
../rtl/c/pnmdrcr.c
../rtl/c/position.c
../rtl/c/pprint.c
../rtl/c/prin1.c
../rtl/c/princ.c
../rtl/c/print.c
../rtl/c/prmpfrvl.c
../rtl/c/prn1srng.c
../rtl/c/prncsrng.c
../rtl/c/prntinit.c
../rtl/c/probfil.c
../rtl/c/proclaim.c
../rtl/c/progv_do.c
../rtl/c/prsintgr.c
../rtl/c/psitinif.c
../rtl/c/psnmsng.c
../rtl/c/pstnfnt.c
../rtl/c/pthnmdvc.c
../rtl/c/pthnmep.c
../rtl/c/pthnmhst.c
../rtl/c/pthnmnm.c
../rtl/c/pthnmtyp.c
../rtl/c/ptnmvrsn.c
../rtl/c/rassoc.c
../rtl/c/rassocif.c
../rtl/c/ratiop.c
../rtl/c/rdcrnng.c
../rtl/c/rdrmsrng.c
../rtl/c/readbyte.c
../rtl/c/readchar.c
../rtl/c/readinit.c
../rtl/c/readline.c
../rtl/c/realp.c
../rtl/c/reduce.c
../rtl/c/remprop.c
../rtl/c/replace.c
../rtl/c/rest.c
../rtl/c/reverse.c
../rtl/c/revppend.c
../rtl/c/rmvdplcs.c
../rtl/c/rnmfil.c
../rtl/c/room.c
../rtl/c/rplaca.c
../rtl/c/rplacd.c
../rtl/c/rsscifnt.c
../rtl/c/rtionlp.c
../rtl/c/rwmjrrf.c
../rtl/c/s_fill_n.c
../rtl/c/s_find_n.c
../rtl/c/s_load_n.c
../rtl/c/sadjoinn.c
../rtl/c/sassocn.c
../rtl/c/sbgnmdg.c
../rtl/c/sbnrsls.c
../rtl/c/sbsfn.c
../rtl/c/sbstttf.c
../rtl/c/scgnrlrr.c
../rtl/c/schar.c
../rtl/c/schrrlop.c
../rtl/c/schrrlpn.c
../rtl/c/scngvbgn.c
../rtl/c/scnswtgc.c
../rtl/c/scntfntn.c
../rtl/c/scountn.c
../rtl/c/scpvbgnm.c
../rtl/c/scuntifn.c
../rtl/c/sdefs.c
../rtl/c/sdeleten.c
../rtl/c/sdjstrrn.c
../rtl/c/sdltfntn.c
../rtl/c/sdltif.c
../rtl/c/sdltifn.c
../rtl/c/sdmsngn.c
../rtl/c/search.c
../rtl/c/second.c
../rtl/c/segment.c
../rtl/c/seqsimp.c
../rtl/c/set.c
../rtl/c/set_char.c
../rtl/c/set_cxr.c
../rtl/c/set_get.c
../rtl/c/set_getf.c
../rtl/c/set_nth.c
../rtl/c/set_rest.c
../rtl/c/setaref0.c
../rtl/c/setaref1.c
../rtl/c/setaref2.c
../rtl/c/setaref3.c
../rtl/c/setaref4.c
../rtl/c/setaref5.c
../rtl/c/setaref6.c
../rtl/c/setaref7.c
../rtl/c/setf_bit.c
../rtl/c/setfaref.c
../rtl/c/setfifth.c
../rtl/c/setfirst.c
../rtl/c/setfsbit.c
../rtl/c/setninth.c
../rtl/c/setpckge.c
../rtl/c/setschar.c
../rtl/c/setsixth.c
../rtl/c/setsvref.c
../rtl/c/settenth.c
../rtl/c/setthird.c
../rtl/c/seventh.c
../rtl/c/sfaref.c
../rtl/c/sffllpnr.c
../rtl/c/sfindifn.c
../rtl/c/sfllfntn.c
../rtl/c/sfllpnr.c
../rtl/c/sfndfntn.c
../rtl/c/sforval.c
../rtl/c/sfpaddr.c
../rtl/c/sfptype.c
../rtl/c/sfstrval.c
../rtl/c/sfwrvrsn.c
../rtl/c/sgvvbnng.c
../rtl/c/shrtstnm.c
../rtl/c/si_throw.c
../rtl/c/sinpckgn.c
../rtl/c/sixth.c
../rtl/c/skwrdrgp.c
../rtl/c/slclosen.c
../rtl/c/slodrunn.c
../rtl/c/slopenn.c
../rtl/c/slplcsn.c
../rtl/c/slunionn.c
../rtl/c/slwriten.c
../rtl/c/smblfncn.c
../rtl/c/smblplst.c
../rtl/c/smblvllp.c
../rtl/c/smembern.c
../rtl/c/smergen.c
../rtl/c/smjndxx.c
../rtl/c/smkerryn.c
../rtl/c/smklistn.c
../rtl/c/smkpckgn.c
../rtl/c/smkptnmn.c
../rtl/c/smkrstrg.c
../rtl/c/smkscrr.c
../rtl/c/smksqncn.c
../rtl/c/smksrngn.c
../rtl/c/smkstbln.c
../rtl/c/smmbrfnn.c
../rtl/c/smmbrifn.c
../rtl/c/smplbvcp.c
../rtl/c/smplrryp.c
../rtl/c/smplsngp.c
../rtl/c/smplvcrp.c
../rtl/c/smsmtchn.c
../rtl/c/smvfncll.c
../rtl/c/smvplcsn.c
../rtl/c/snbnnjmp.c
../rtl/c/snddbjcp.c
../rtl/c/sndrdcrp.c
../rtl/c/sngcplzn.c
../rtl/c/snglpn.c
../rtl/c/sngnlpn.c
../rtl/c/sngppnd2.c
../rtl/c/sngppndn.c
../rtl/c/snngclzn.c
../rtl/c/snngncn.c
../rtl/c/snngpcn.c
../rtl/c/snnlncll.c
../rtl/c/snnrscnn.c
../rtl/c/snrscnn.c
../rtl/c/snsbsfn.c
../rtl/c/snsbsfnn.c
../rtl/c/snsbsn.c
../rtl/c/snsbstfn.c
../rtl/c/snsdrncn.c
../rtl/c/snslngnn.c
../rtl/c/snsqncfn.c
../rtl/c/snsublsn.c
../rtl/c/snsubstn.c
../rtl/c/sntmisc.c
../rtl/c/snunionn.c
../rtl/c/snxclvn.c
../rtl/c/some.c
../rtl/c/sort.c
../rtl/c/spgvbnng.c
../rtl/c/spnmngn.c
../rtl/c/sprsngrn.c
../rtl/c/spsitinn.c
../rtl/c/spsnfnn.c
../rtl/c/spstnfn.c
../rtl/c/squncp.c
../rtl/c/srassocn.c
../rtl/c/srcrbjcp.c
../rtl/c/sreducen.c
../rtl/c/sremoven.c
../rtl/c/sreplcen.c
../rtl/c/srethrow.c
../rtl/c/srmovifn.c
../rtl/c/srmvfntn.c
../rtl/c/srngcplz.c
../rtl/c/srngdncs.c
../rtl/c/srngppnd.c
../rtl/c/srrcnns.c
../rtl/c/srsscfnn.c
../rtl/c/srsscifn.c
../rtl/c/srstrvls.c
../rtl/c/srwmjrrf.c
../rtl/c/ssbsfn.c
../rtl/c/ssbsfnn.c
../rtl/c/ssbstttn.c
../rtl/c/ssdrncn.c
../rtl/c/ssearchn.c
../rtl/c/ssffncn.c
../rtl/c/ssmblncn.c
../rtl/c/ssmblpls.c
../rtl/c/ssnggpn.c
../rtl/c/ssngncsn.c
../rtl/c/ssngngpn.c
../rtl/c/ssngnqln.c
../rtl/c/ssngpcsn.c
../rtl/c/ssrnggn.c
../rtl/c/ssrngln.c
../rtl/c/ssrngqln.c
../rtl/c/ssrnpqr.c
../rtl/c/ssscfntn.c
../rtl/c/sssmblld.c
../rtl/c/sssocifn.c
../rtl/c/sstrmgtc.c
../rtl/c/sstrnggn.c
../rtl/c/sstrngln.c
../rtl/c/sstrngnn.c
../rtl/c/sstrngqn.c
../rtl/c/ssublisn.c
../rtl/c/ssubstfn.c
../rtl/c/ssubstn.c
../rtl/c/ssubstpn.c
../rtl/c/ssvmrvls.c
../rtl/c/ssvvlus.c
../rtl/c/ssxclsvn.c
../rtl/c/statclst.c
../rtl/c/statics.c
../rtl/c/statlsts.c
../rtl/c/stderror.c
../rtl/c/stdffrnc.c
../rtl/c/stdpkgs.c
../rtl/c/stfaref.c
../rtl/c/stffnctn.c
../rtl/c/stfourth.c
../rtl/c/stighth.c
../rtl/c/streamp.c
../rtl/c/streams.c
../rtl/c/string.c
../rtl/c/stringp.c
../rtl/c/strings.c
../rtl/c/strinint.c
../rtl/c/strminit.c
../rtl/c/strngcrp.c
../rtl/c/strngpcs.c
../rtl/c/strquln.c
../rtl/c/struct.c
../rtl/c/structi.c
../rtl/c/stscond.c
../rtl/c/stsubsq.c
../rtl/c/stsubsq1.c
../rtl/c/stsubsq2.c
../rtl/c/stsvnth.c
../rtl/c/sttcbtrr.c
../rtl/c/sttccrrr.c
../rtl/c/sttcflot.c
../rtl/c/sttcpckg.c
../rtl/c/sttcrr.c
../rtl/c/sttcrto.c
../rtl/c/sttcsmbl.c
../rtl/c/stxclsvr.c
../rtl/c/sublis.c
../rtl/c/subseq.c
../rtl/c/subsetp.c
../rtl/c/subst.c
../rtl/c/subst_if.c
../rtl/c/substfnt.c
../rtl/c/substtut.c
../rtl/c/subtypep.c
../rtl/c/svref.c
../rtl/c/swrsrngn.c
../rtl/c/swrtlnn.c
../rtl/c/swrtstng.c
../rtl/c/symblvlu.c
../rtl/c/symbolnm.c
../rtl/c/symbolp.c
../rtl/c/symbols.c
../rtl/c/tailp.c
../rtl/c/tenth.c
../rtl/c/terpri.c
../rtl/c/tfaref.c
../rtl/c/third.c
../rtl/c/tlllcbl.c
../rtl/c/treeequl.c
../rtl/c/ttlmmrsd.c
../rtl/c/type_of.c
../rtl/c/typep.c
../rtl/c/unquetag.c
../rtl/c/unredchr.c
../rtl/c/upprcsp.c
../rtl/c/upstpckg.c
../rtl/c/usersyms.c
../rtl/c/usmdpnm.c
../rtl/c/values.c
../rtl/c/vcrpsxnd.c
../rtl/c/vctorpop.c
../rtl/c/vctrpush.c
../rtl/c/vector.c
../rtl/c/vectorp.c
../rtl/c/vluslist.c
../rtl/c/writbyt.c
../rtl/c/writechr.c
../rtl/c/writlin.c
../rtl/c/wrtstrng.c
../rtl/c/wtspccrp.c
../rtl/c/xor.c
../rtl/c/y_or_n_p.c
../rtl/c/yesnoaux.c
../rtl/c/yesornop.c
../rtl/c/yornpn.c
../rtl/c/ysornopn.c)
ADD_LIBRARY(librtl ${RTL_SRC_LIST})
SET_TARGET_PROPERTIES(librtl PROPERTIES COMPILE_DEFINITIONS "CHESTNUT;_LIB;_CTYPE_DISABLE_MACROS;_CRT_SECURE_NO_WARNINGS")

#libtcp lib
SET(TCP_SRC_LIST 
../specific/intelnt/backtrac.obj
../ext/c/cprim.c
../ext/c/cprocess.c
../ext/c/cstreams.c
../ext/c/ctime.c
../ext/c/event.c
../ext/c/g2longint.c
../ext/c/g2ptrs.c
../ext/c/g2signal.c
../ext/c/netstubs.c
../ext/c/networks.c
../ext/c/ntevent.c
../ext/c/packaging.c
../ext/c/sckevent.c
../ext/c/sslnoop.c
../ext/c/tcp.c
../ext/c/trace.c
)
ADD_LIBRARY(libtcp ${TCP_SRC_LIST})
SET_TARGET_PROPERTIES(libtcp PROPERTIES COMPILE_DEFINITIONS "_LIB;_MT")

target_link_libraries(gsi 
odbc32.lib 
odbccp32.lib 
oldnames.lib 
ws2_32.lib 
mswsock.lib 
wsock32.lib 
netapi32.lib 
rpcrt4.lib 
version.lib
librtl
libtcp
)